--- a/marketPlace/src/main/resources/application.properties
+++ b/marketPlace/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:postgresql://ec2-52-206-182-219.compute-1.amazonaws.com:5432/do8vjvebrqbt4
 spring.datasource.username=bxlcvtjexujcnu
 spring.datasource.password=bxlcvtjexujcnu
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
